Added revoke endpoint
- added spec
