# config/routes.rb
@@ -2,8 +2,9 @@ Rails.application.routes.draw do
   apipie
 
   namespace :v1 do
-    post 'auth/access_token' => 'authentication#access_token'
+    post 'auth/access_token'  => 'authentication#access_token'
     post 'auth/refresh_token' => 'authentication#refresh_token'
+    post 'auth/revoke'        => 'authentication#revoke'
 
     resources :accounts, only: %i[index show create update destroy]
     resources :categories, only: %i[index show create update destroy]
