# doc/apidoc/schema_swagger_form_data.json
@@ -1427,6 +1427,40 @@
         "description": ""
       }
     },
+    "/v1/auth/revoke": {
+      "post": {
+        "tags": [
+          "authentication"
+        ],
+        "consumes": [
+          "application/x-www-form-urlencoded",
+          "multipart/form-data"
+        ],
+        "operationId": "post_v1_auth_revoke",
+        "summary": "Revoke the given access token",
+        "parameters": [
+          {
+            "name": "Authentication",
+            "in": "header",
+            "required": true,
+            "description": "User access token",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "204": {
+            "description": "Successful response"
+          }
+        },
+        "description": ""
+      }
+    },
     "/v1/financial_institutions": {
       "get": {
         "tags": [
